--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_more = {version = "1.0.0", features = ["add", "display", "from", "into"]}
+pipe-trait = "0.4.0"
+reqwest = {"version" = "0.12.5", "features" = ["blocking", "json"]}
+serde = {"version" = "1.0.207", features = ["derive"]}
