--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ derive_more = {version = "1.0.0", features = ["add", "display", "from", "into"]}
 pipe-trait = "0.4.0"
 reqwest = {"version" = "0.12.5", "features" = ["blocking", "json"]}
 serde = {"version" = "1.0.207", features = ["derive"]}
+thiserror = "1.0.63"
