--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 derive_more = {version = "1.0.0", features = ["add", "display", "from", "into"]}
+num-traits = "0.2.19"
 pipe-trait = "0.4.0"
 reqwest = {"version" = "0.12.5", "features" = ["blocking", "json"]}
 serde = {"version" = "1.0.207", features = ["derive"]}
